--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -22,12 +22,12 @@
       };
 
       --border-top: 5px solid #cf6766;
-      border-bottom: 2px solid #cf6766;
+      border-bottom: 5px solid #cf6766;
       height:70px;
     }
   
   paper-toolbar {
-      --paper-toolbar-background: #333a56;--#30415d;--#1C263C;
+      --paper-toolbar-background:#24293d;--#24293d;--#30415d;--#1C263C;
       
       --opacity:var(--dark-primary-opacity);
       --border-bottom: 1px solid #e0e0e0;
