--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -19,7 +19,7 @@
         #userid {
             margin-right: 10px;
             margin-bottom: 10px;
-            color: #333a56;
+            color: #24293d;
         }
 
         #name {
@@ -28,7 +28,7 @@
 
         .button {
             border-bottom: 1px solid #dfdfdf;
-            color: #333a56;
+            color: #24293d;
             width:100%;
             --background-color: #e5f1f5;
         }
