--- a/src/components/common/aq-dropdown.html
+++ b/src/components/common/aq-dropdown.html
@@ -54,7 +54,7 @@
 		
 		paper-listbox {
 			--paper-listbox-background-color:var(--dropdown-background-color, white);
-			border-radius: 5px;
+			--border-radius: 5px;
 			--width: 100%;
 			--z-index: 1002;
 			--opacity: 1.0;
