--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -17,7 +17,7 @@
       #container {
           width:90%;
           margin:0 auto;
-          color:#333a56; 
+          color:#24293d; 
           margin-top:10px;  
       }
 
@@ -30,7 +30,7 @@
         height: 32px;
         font-size: 18px;
         margin-bottom: 5px;
-        color:#333a56;
+        color:#24293d;
         border:1px solid #e5e5e5;
         padding-left: 10px;
       }
@@ -52,7 +52,7 @@
         }
 
       paper-button {
-        border: 1px solid #333a56;
+        border: 1px solid #24293d;
         height:30px;
         font-size: 13px;
       }
