--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -82,13 +82,15 @@
 			--dropdown-font-size:15px;
 			--dropdown-paper-menu-font-size:16px;
 			--dropdown-background-color:#99ced4;
+			--dropdown
+
 		}
 
 	</style>
 	
 	<template>
       		<div id="search" class="wrap flex layout horizontal">
-	    		<aq-dropdown vertical-offset=56 class="self-center" id='category_dd' options="[[categories]]"></aq-dropdown>
+	    		<aq-dropdown vertical-offset=48 class="self-center" id='category_dd' options="[[categories]]"></aq-dropdown>
     		
 
 	  			<input id="searchbox" placeholder="Search posts" class="flex"
