--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -20,7 +20,7 @@
     }
 
     paper-button {
-        border: 1px solid #333a56;
+        border: 1px solid #24293d;
         height:30px;
         font-size: 13px;
     }
