--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -19,7 +19,7 @@
       width:90%;
       margin: 0 auto;
       margin-top: 10px;
-      color: #333a56;
+      color: #24293d;
     }
 
     .goBackButton {
