--- a/src/components/editor/aq-editor-edit-nonprogrammer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer.html
@@ -23,13 +23,13 @@
 	<style>
 
 		:host {
-			color: #333a56;
+			color: #24293d;
 		}
 
 		paper-toolbar {
       		--paper-toolbar-height:50px;
 			--paper-toolbar-background:#99d3df;
-		    --paper-toolbar-color:#333a56;
+		    --paper-toolbar-color:#24293d;
     	}
 
     	
@@ -71,12 +71,12 @@
     	}
 
     	paper-tabs {
-    		--paper-tabs-selection-bar-color: #333a56;
+    		--paper-tabs-selection-bar-color: #24293d;
     		height:25px;
     	}
 
     	#rightpanel {
-    		background-color: #333a56;
+    		background-color: #24293d;
     	}
 
     	#screenerCanvas {
