--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -62,7 +62,7 @@
       },
 
       getCodeContent: function() {
-        return this.$.codeEditor.value; 
+        return this.$.codeEditor.value.trim(); 
       }, 
 
       isSelectedBarRun: function(sideBar) {
