--- a/src/components/editor/aq-editor-home-elementmenu.html
+++ b/src/components/editor/aq-editor-home-elementmenu.html
@@ -34,7 +34,7 @@
 
       a, iron-icon {
         font-size: 12px;
-        color: #333a56;
+        color: #24293d;
         outline: none;
       }
 
