--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -87,7 +87,7 @@
     		margin-right: 10px;
     		min-width:25px;
     		max-width:35px;
-    		color: white; --#188364; --#333a56; 
+    		color: white; --#188364; --#24293d; 
     		background-color: #cf6766;
 		}
 
