--- a/src/components/help/aq-help-home.html
+++ b/src/components/help/aq-help-home.html
@@ -42,11 +42,11 @@
     }
 
     #drawerPanel {
-      background-color: #333a56;
+      background-color: #24293d;
     }
 
     paper-listbox {
-      background-color: #333a56;
+      background-color: #24293d;
     }
     
     paper-item {
@@ -96,7 +96,7 @@
     }
 
     #bottom{
-      padding-bottom: 500px;
+      padding-bottom: 450px;
     }
 
   </style>
