--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -8,7 +8,7 @@
 
 		:host{
 			--font-family: 'Roboto';
-			color:#333a56;
+			color:#24293d;
 		};
 		
 		.inputbox {
@@ -69,7 +69,7 @@
 			--margin-left:5px;
 			padding-bottom:10px;
 			--border: 1px solid #e5e5e5;
-			border-bottom: 1px solid #333a56;
+			border-bottom: 1px solid #24293d;
 
 		}
 
@@ -79,7 +79,7 @@
 			--margin-left:5px;
 			--border: 1px solid #e5e5e5;
 			padding-bottom:10px;
-			border-bottom: 1px solid #333a56;
+			border-bottom: 1px solid #24293d;
 		}
 
 		#universeSettings {	
@@ -110,7 +110,7 @@
 		#heading span{
 			font-weight: bold;
 			--color: green;
-			color:#333a56;
+			color:#24293d;
 		}
 
 		paper-button {
